# zgl

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  configure
include/zgl/: app.hpp  camera.hpp  maybe.hpp  ref.hpp  resource.hpp  time.hpp
include/zgl/event/: callback.hpp  dispatch.hpp  event.hpp  kb.hpp  mouse.hpp  window.hpp
include/zgl/gl/: debug.hpp  render.hpp  shader.hpp  texture.hpp
include/zgl/glfw/: kb.hpp  mouse.hpp  render.hpp  window.hpp
include/zgl/image/: image.hpp  stbimage.hpp
include/zgl/render/: render.hpp  shader.hpp  texture.hpp
include/zgl/window/: kb.hpp  mouse.hpp  window.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/event/: mouse.cpp  window.cpp
src/gl/: render.cpp  shader.cpp  texture.cpp
src/glfw/: render.cpp  window.cpp
src/image/: stbimage.cpp
